--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     min-height: 90vh;
-    background: white;
+    background: rgb(250, 249, 251);
     padding: 0 50px;
     margin-top: 64px;
 }
 
 .header {
-   background: #6C63FF;
+   background: linear-gradient(
+    294.17deg, rgb(47, 25, 55) 35.57%, rgb(69, 38, 80) 92.42%, rgb(69, 38, 80) 92.42%);
    display: flex;
    justify-content: space-between;
    align-items: center;
