--- a/pages/events/events.module.scss
+++ b/pages/events/events.module.scss
@@ -8,6 +8,19 @@
     position: relative;
     border: 1px solid #e6e6e6;
     margin: 16px 0;
+    background:  rgb(212, 209, 236);
+    h1 {
+        margin: 0;
+    }
+    h5 {
+      margin: 8px 0px 16px 0px;      
+      font-size: 18px;
+    }
+}
+.eventsContainer {
+    h1 {
+        margin: 16px 0;
+    }
 }
 .container {
     display: flex;
@@ -20,3 +33,19 @@
         font-weight: 600;
     }
 }
+.eventCard {
+    background: rgb(255, 255, 255);
+    border-radius: 4px;
+    box-shadow: rgb(37 11 54 / 4%) 0px 2px 0px;
+    position: relative;
+    margin: 0px;
+    visibility: visible;
+    height: 100%;
+}
+.antImage  {
+        width: 100%;
+        height: 200px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
