--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -4,7 +4,11 @@
 .layoutContent {
     display: flex;
     flex-direction: column;
-     padding: 24px;
+    margin-left: 200px;
+    padding: 24px;
+}
+.layoutInnerContainer {
+    margin-top: 64px;
 }
 
 .header {
@@ -13,6 +17,11 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
+   position: fixed;
+   z-index: 1;
+   width: 100%;
+   height: 64px;
+   padding: 8px 16px
 }
 
 .title {
@@ -23,7 +32,6 @@
 
 .logoContainer {
     display: flex;
-    padding: 16px;
     justify-content: center;
     cursor: pointer;
 }
@@ -35,4 +43,8 @@
 .layoutSider {
     background: #fff;
     border-right: 1px solid #e8e8e8;
+    position: fixed;
+    left: 0;
+    height: 100vh;
+    z-index: 10;
 }
