added landing page

--- a/components/Event/Event.module.scss
+++ b/components/Event/Event.module.scss
@@ -8,7 +8,7 @@
     position: relative;
     border: 1px solid #e6e6e6;
     margin: 16px 0;
-    background:  rgb(212, 209, 236);
+    background:  #D4D1EC;
     h1 {
         margin: 0;
     }
