--- a/components/LandingPage/LandingPage.module.scss
+++ b/components/LandingPage/LandingPage.module.scss
@@ -1,44 +1,138 @@
 .background {
-    height: 100vh;
     width: 100vw;
+    margin-top: 96px;
+    @media only screen and (max-width: 768px) {
+        margin-top: 160px;
+
+    }
+}
+.container_holder {
+    background-color: rgba(237,242,247,1);
 }
 .container {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    padding: 64px;
-    z-index: 1;
-    background-color: #0080C1;
-    border-radius: 0 0 60% 0;
-    position: absolute;
+    width: 86vw;
+    max-width: 1240px;
+    margin: 0 auto;
+    padding: 80px 16px;
+    text-align: center;
+    @media only screen and (max-width: 768px) {
+        padding: 24px 8px;
+
+    }
+}
+.banner {
+
     h1 {
-        font-size: 2.5rem;
-        font-weight: bolder;
-        color: #fff;
-        margin: 0;
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 64px;
+        @media only screen and (max-width: 768px) {
+            font-size: 1.5rem;
+            line-height: 32px;
+        }
+        
     }
     p {
         font-size: 1.5rem;
-        color: #fff;
-        font-style: italic;
-        margin: 0;
+        padding-top: 1rem;
+        color: rgba(113,128,150,1);
+        line-height: 36px;
+        @media only screen and (max-width: 768px) {
+            line-height: 18px;
+            font-size: 1rem;
+
+        }
     }
+
 }
-.joinButton {
-    width: 20%;
-    height: 64px;
-    background-color: #fff;
-    border-radius: 5px;
+@mixin button
+ {
+    height: 32px;
+    background-color: rgba(102,126,234,1);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 18px;
     font-weight: bold;
-    color: #0080C1;
-    margin-top: 16px;
+    color: white;
+    line-height: 27px;
+    padding: 24px;
+}
+    
+.signInButton {
+    @include button;
+}
+.joinButton {
+    @include button;
+    margin: auto;
+
 }
 
+.header {
+    display: flex;
+    justify-content: space-around;
+    padding: 24px;
+    background-color: rgba(237,242,247,1);
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    height: 96px;
+    @media only screen and (max-width: 768px) {
+        height: 168px;
+      }
+}
 .logo {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+     h1 {
+         margin: 0;
+         font-size: 2.5rem;
+         font-weight: 600;
+     }
+}
 
+.feature_holder {
+    display: flex;
+    justify-content: space-around;
+    padding: 24px;
+    background: white;
+}
+
+.videoFeatureSvg {
+    max-width: 800px;
+}
+
+
+.featureCards {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: left;
+}
+.featureCard {
+    border-radius: 4px;
+    padding: 16px;
+    margin: 16px;
+    @media only screen and (max-width: 768px) {
+        margin: 16px 0;
+    }
+    background: rgba(237,242,247,1);
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+
+    h2 {
+        font-size: 1.5rem;
+        font-weight: 700;
+    }
+    p {
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+        color: rgba(113,128,150,1);
+    }
+}
+
+.footer_holder {
+    background: white ;
 }
