--- a/containers/EventContainer/EventContainer.module.scss
+++ b/containers/EventContainer/EventContainer.module.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 100px;
+   // margin-top: 100px;
     h1 {
         font-size: 24px;
         font-weight: 600;
