answer to questions

--- a/components/Video/Video.module.scss
+++ b/components/Video/Video.module.scss
@@ -2,4 +2,7 @@
     display: grid;
     justify-content: center;
     margin: 16px 0px;
+    :global .embed-top-bar_embedTopSection_3VD {
+        display: none;
+    }
 }
