--- a/components/QuestionCards/QuestionCards.module.scss
+++ b/components/QuestionCards/QuestionCards.module.scss
@@ -8,6 +8,9 @@
     :global .ant-card-head {
         border-bottom: none;
     }
+    :global .ant-card-body {
+        padding-top: 0;
+    }
     :global .ant-card-actions > li {
        text-align: right;
        padding: 8px;
