--- a/pages/events/[id]/event.module.scss
+++ b/pages/events/[id]/event.module.scss
@@ -4,19 +4,19 @@
     min-height: 100vh;
     //background: linear-gradient(135deg, rgb(122, 101, 230) 0%, rgb(248, 187, 206) 100%);
 
-    :global .ant-tabs {
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-    }  
-    :global .ant-tabs-nav {
-      padding: 16px;
-    } 
-    :global .ant-tabs-content-holder {
-      width: 100vw;
-      margin: auto; 
-      margin-bottom: 16px; 
-    }
+    // :global .ant-tabs {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: flex-end;
+    // }  
+    // :global .ant-tabs-nav {
+    //   padding: 16px;
+    // } 
+    // :global .ant-tabs-content-holder {
+    //   width: 100vw;
+    //   margin: auto; 
+    //   margin-bottom: 16px; 
+    // }
 }
 .pageHeader {
       background: linear-gradient(135deg, rgb(122, 101, 230) 0%, rgb(248, 187, 206) 100%);
@@ -35,6 +35,7 @@
 }
 .participatePageContent {
   margin-top: 64px;
+  padding: 24px;
 }
 .backButton {
     position:fixed;
@@ -48,9 +49,9 @@
   padding: 24px;
   :global .ant-card {     
     border-radius: 24px;
-    padding-left: 24px;
-    padding-right: 24px;
-
+    // padding-left: 24px;
+    // padding-right: 24px;
+    padding: 0;
     &-actions {
       border-top: none;
     }
