--- a/components/ClapEmoji/ClapEmoji.module.scss
+++ b/components/ClapEmoji/ClapEmoji.module.scss
@@ -10,24 +10,24 @@
     display: inline-flex;
 }
 
-.clapsCircle:active {
-    animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
-    animation-duration: 2.5s;        /* Change to speed up or slow down */
-    animation-iteration-count: infinite;  /* Never stop waving :) */
-    transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
-    display: inline-block;
-    font-size: x-large;
+.wave {
+    animation-name: wave-animation; 
+    animation-duration: 2.5s;       
+    animation-iteration-count: 1;  
+    transform-origin: 70% 70%;       
+    font-size: 4em;
+    position: absolute;
   }
   
   @keyframes wave-animation {
       0% { transform: translateY(100px) }
      10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
      20% { transform: rotate(-8.0deg) }
-     30% { transform: translateY(50) }
-     40% { transform: rotate(-4.0deg) }
+     30% { transform: translateY(-40px) }
+     40% { transform: translateY(-100px) rotate(-4.0deg) }
      50% { transform: rotate(10.0deg) }
-     60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
-    100% { transform: translateY(0px), rotate(0.0deg), scale(1.0)}
+     60% { transform: translateY(-300px) rotate( 0.0deg) }  /* Reset for the last half to pause */
+    100% { transform: translateY(-800px), rotate(0.0deg), scale(1.0); opacity: 0;}
   }
   
   
