added claps and answer

--- a/components/Event/MemberView.module.scss
+++ b/components/Event/MemberView.module.scss
@@ -18,6 +18,8 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    box-shadow: rgb(37 11 54 / 4%) 0px 2px 0px;
+    border-radius: 0 10px 10px 0;
 }
 
 .eventsView {
