--- a/components/Video/Video.module.scss
+++ b/components/Video/Video.module.scss
@@ -6,4 +6,7 @@
         display: none;
     }
     min-height: 400px;
+    @media only screen and (max-width: 768px) {
+        min-height: 200px;
+    }
 }
