--- a/containers/EventContainer/EventContainer.module.scss
+++ b/containers/EventContainer/EventContainer.module.scss
@@ -17,6 +17,9 @@
 .centerPane {
     margin: auto;
     width: 1200px;
+    @media only screen and (max-width: 768px) {
+        width: 100%;
+    }
 }
 
 .marginBottom {
