--- a/pages/events/[id]/event.module.scss
+++ b/pages/events/[id]/event.module.scss
@@ -38,6 +38,9 @@
 .participatePageContent {
   margin-top: 64px;
   padding: 24px;
+  @media only screen and (max-width: 768px) {
+    padding: 4px;
+  }
 }
 .backButton {
     position:fixed;
@@ -47,7 +50,10 @@
 .participateCarousel {
   width: 800px;
   margin: auto;
-
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+    padding: 8px;
+  }
   padding: 24px;
   :global .ant-card {     
     border-radius: 24px;
@@ -94,7 +100,9 @@
 .eventInfo {
   width: 600px;
   margin: auto;
-
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+  }
   button {
     @include primaryButtonSmall;
     float: right;
@@ -107,6 +115,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  @media only screen and (max-width: 768px) {
+   height: 300px;
+  }
   svg {
     width: 800px;
     height: 600px;
