--- a/components/AppLayout/AppLayout.module.scss
+++ b/components/AppLayout/AppLayout.module.scss
@@ -12,6 +12,7 @@
     @media only screen and (max-width: 768px) {
         margin-left: 0px;
         width: 100% !important;
+        margin-left: 84px;
     }
 }
 .layoutContentWithoutSider {
@@ -60,9 +61,6 @@
     left: 0;
     height: 100vh;
     z-index: 10;
-    @media only screen and (max-width: 768px) {
-        display: none;
-      }
 }
 
 .backButton {
