showing gift cards

--- a/containers/EventContainer/AnswerContainer/AnswerContainer.module.scss
+++ b/containers/EventContainer/AnswerContainer/AnswerContainer.module.scss
@@ -36,3 +36,13 @@
     width: 500px;
     margin: auto;
 }
+
+.desc {
+    margin: 0 36px 16px;
+    color: gray;
+}
+.clapMsg {
+    color: gray;
+    text-align: right;
+    margin: 16px;
+}
